--- a/yesod-media-simple.cabal
+++ b/yesod-media-simple.cabal
@@ -21,7 +21,7 @@ library
                        bytestring,
                        diagrams-cairo,
                        diagrams-core,
-                       diagrams-lib,
+                       diagrams-lib >= 1.3 && < 1.4,
                        directory,
                        JuicyPixels,
                        vector,
